add & edit icons section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,28 @@
         </div>
     </div>
     <!-- main section/ -->
-
+    <!-- icons section -->
+    <div class="icons flex justify-center border border-[#D35910]">
+        <div class="group relative w-20">
+            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 transition duration-700 z-10"
+                onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                src="star/mini dirnks/mini apple.svg" alt="">
+            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                src="star/mini dirnks/mini apple.svg" alt="">
+            <h2 class="group-hover:text-[#D35910]">orange</h2>
+        </div>
+        <div class="group relative w-20">
+            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 transition duration-700 z-10"
+                onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                src="star/mini dirnks/mini apple.svg" alt="">
+            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                src="star/mini dirnks/mini apple.svg" alt="">
+            <h2 class="group-hover:text-white">orange</h2>
+        </div>
+    </div>
+    <!-- icons section/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script>
 
