some editing on main bar

--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
     </aside>
     <!-- nav bar/ -->
     <!-- main section -->
-    <div class="content flex justify-between items-center">
-        <div class="relative w-80 group -translate-x-72">
-            <img class="absolute group-hover:translate-x-0 translate-x-15 group-hover:translate-y-12 group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000]"
+    <div class="content flex justify-between items-center w-full">
+        <div class="w-[40%] relative w-80 group -translate-x-32">
+            <img class="absolute group-hover:translate-x-0 translate-x-0 group-hover:translate-y-12 group-hover:scale-150 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                 src="star/Cartoons/Cartoon peach center.svg" alt="">
-            <img class="absolute translate-x-6 z-[9] group-hover:translate-x-0 group-hover:hidden"
+            <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-9 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
-            <img class="absolute -translate-x-6 z-[9] group-hover:translate-x-0 group-hover:hidden"
+            <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-40 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
         </div>
-        <div class="image">
+        <div class="image W-[40%]">
             <img class="img w-[180px] transition duration-[0.5s] pointer hover:scale-[1.2]"
-                src="star/منتجات BOOM BOOM/PINEAPPLE F.png" alt="">
+                src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
         </div>
-        <div class="text text-white w-[40%]">
+        <div class="text text-white w-[20%]">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
             <p class="text-2">
             <h2 class="text-[30px] uppercase">apple</h2>
