--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
             <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-40 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
         </div>
-        <div class="image W-[40%]">
-            <img class="img w-[180px] transition duration-[0.5s] pointer hover:scale-[1.2]"
+        <div class="image W-[40%] group">
+            <img class="img w-[60%] transition duration-[0.5s] pointer origin-bottom-right group-hover:rotate-6"
                 src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
+
         </div>
         <div class="text text-white w-[20%]">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
@@ -72,7 +73,7 @@
     <!-- icons section -->
     <div class="icons flex justify-center border border-[#D35910]">
         <div class="group relative w-20">
-            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 transition duration-700 z-10"
+            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
                 onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
             <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
                 src="star/mini dirnks/mini apple.svg" alt="">
@@ -81,7 +82,7 @@
             <h2 class="group-hover:text-[#D35910]">orange</h2>
         </div>
         <div class="group relative w-20">
-            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 transition duration-700 z-10"
+            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
                 onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
             <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
                 src="star/mini dirnks/mini apple.svg" alt="">
