--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- main section -->
     <div class="content flex justify-between items-center w-full">
         <div class="w-[40%] relative w-80 group -translate-x-32">
-            <img class="absolute group-hover:translate-x-0 translate-x-0 group-hover:translate-y-12 group-hover:scale-150 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
+            <img class="absolute z-10 group-hover:translate-x-0 translate-x-0 group-hover:translate-y-12 group-hover:scale-150 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                 src="star/Cartoons/Cartoon peach center.svg" alt="">
             <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-9 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
@@ -53,7 +53,6 @@
         <div class="image W-[40%] group">
             <img class="img w-[60%] transition duration-[0.5s] pointer origin-bottom-right group-hover:rotate-6"
                 src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
-
         </div>
         <div class="text text-white w-[20%]">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
