--- a/index.html
+++ b/index.html
@@ -56,15 +56,16 @@
         </div>
         <div class="text text-white w-[20%]">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
-            <p class="text-2">
+            <p class="text-xs">
             <h2 class="text-[30px] uppercase">apple</h2>
             You might be looking at this Slider Revolution template and wondering how the heck you’re going to
             repurpose it for your
             needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
             sliders, it can easily
             be done within minutes. <br><br>
-            <a class="text-white py-2 px-3 rounded-[20px] border border-[#D35910]" href="#">All
-                products</a>
+            <a class="text-white py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]" href="#">
+                All products
+            </a>
             </p>
         </div>
     </div>
