--- a/index.html
+++ b/index.html
@@ -50,9 +50,19 @@
             <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-40 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
         </div>
-        <div class="image W-[40%] group">
-            <img class="img w-[60%] transition duration-[0.5s] pointer origin-bottom-right group-hover:rotate-6"
+        <div class="image w-[40%] group flex">
+            <img class="img w-[60%] z-10 transition duration-[0.5s] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]"
                 src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
+            <img class="img absolute w-[5%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6"
+                src="star\orange/orange-juice-splash.svg" alt="">
+            <img class="img absolute z-[8] w-[3%] translate-y-[300%] -translate-x-[203%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6"
+                src="star\orange\orange-poster.svg" alt="">
+            <img class="img absolute w-[5%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-36"
+                src="star\orange/orange-ingredients-10.svg" alt="">
+            <img class="img absolute w-[10%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 rotate-[13.07deg] shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 translate-x-40"
+                src="STAR/منتجات BOOM BOOM/PINEAPPLE F 6.svg" alt="">
+            <img class="img absolute w-[10%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 -rotate-[20.82deg] shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 -translate-x-80"
+                src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
         </div>
         <div class="text text-white w-[20%]">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
