--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
         </div>
         <div class="image w-[40%] group flex">
-            <img class="img w-[60%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out"
+            <img class="img w-[60%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
                 src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
-            <img class="img absolute w-[8%] z-[7] transition duration-[1000ms] pointer origin-bottom-right group-hover:-rotate-[50.87deg] translate-y-[193%] -translate-x-[98%] hidden group-hover:block"
+            <img class="img absolute w-[8%] z-[7] transition duration-[3s] pointer origin-bottom-right group-hover:-rotate-[50.87deg] translate-y-[193%] -translate-x-[98%]  group-hover:block  group-hover:-transition-[hidden]"
                 src="star\orange/orange-juice-splash.svg" alt="">
             <img class="img absolute z-[8] w-[7%] translate-y-[200%] -translate-x-[120%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
                 src="star\orange\orange-poster.svg" alt="">
             <img class="img absolute w-[9%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[210%] -translate-x-[83%]"
                 src="star\orange/orange-ingredients-10.svg" alt="">
-            <img class="img absolute w-[5%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 rotate-[13.07deg] shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 translate-x-40"
+            <img class="img absolute w-[5%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 translate-x-[0%]"
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 6.svg" alt="">
-            <img class="img absolute w-[5%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 -rotate-[20.82deg] shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 -translate-x-80"
+            <img class="img absolute w-[5%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 -translate-x-[350%]"
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
         </div>
         <div class="text text-white w-[20%]">
