--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- main section -->
     <div class="content flex justify-between items-center w-full">
         <div class="w-[40%] relative w-80 group -translate-x-32">
-            <img class="absolute z-10 group-hover:translate-x-0 translate-x-0 group-hover:translate-y-12 group-hover:scale-150 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
+            <img class="absolute z-10 group-hover:translate-x-0 translate-x-0 group-hover:translate-y-0 group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                 src="star/Cartoons/Cartoon peach center.svg" alt="">
             <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-9 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
@@ -59,9 +59,9 @@
                 src="star\orange\orange-poster.svg" alt="">
             <img class="img absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[50%]"
                 src="star\orange/orange-ingredients-10.svg" alt="">
-            <img class="img absolute w-[5%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 translate-x-[0%]"
+            <img class="img absolute w-[9%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 translate-x-[30%]"
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 6.svg" alt="">
-            <img class="img absolute w-[5%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 -translate-x-[350%]"
+            <img class="img absolute w-[11%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[23%] -translate-x-[165%]"
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
         </div>
         <div class="text text-white w-[20%]">
