--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img class="img absolute w-[11%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[23%] -translate-x-[165%]"
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
         </div>
-        <div class="text text-white w-[20%]">
+        <div dir="ltr" class="text text-white w-[20%]">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
             <p class="text-xs">
             <h2 class="text-[30px] uppercase">apple</h2>
