--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
     <!-- nav bar/ -->
     <!-- main section -->
     <div class="content flex justify-between items-center w-full">
-        <div class="w-[40%] relative w-80 group -translate-x-32">
-            <img class="absolute z-10 group-hover:translate-x-0 translate-x-0 group-hover:translate-y-0 group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
+        <div class="w-[20%] relative w-80 group m-auto">
+            <img class="scale-[1.2] relative group-hover:-translate-x-[33%] -translate-x-[20%] translate-y-[114%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                 src="star/Cartoons/Cartoon peach center.svg" alt="">
             <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-9 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
             <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-40 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
         </div>
-        <div class="image w-[40%] group flex">
+        <div class="image w-[40%] group flex justify-center">
             <img class="img w-[60%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
                 src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
             <img class="img absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
@@ -64,7 +64,7 @@
             <img class="img absolute w-[11%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[23%] -translate-x-[165%]"
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
         </div>
-        <div dir="ltr" class="text text-white w-[20%]">
+        <div dir="ltr" class="text text-white w-[20%] m-auto">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
             <p class="text-xs">
             <h2 class="text-[30px] uppercase">apple</h2>
