--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
                 src="star\orange\orange-poster.svg" alt="">
             <img class="img absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[50%]"
                 src="star\orange/orange-ingredients-10.svg" alt="">
-            <img class="img absolute w-[9%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-36 translate-x-[30%]"
+            <img class="img absolute w-[9%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)] translate-y-0 translate-x-[130%]  "
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 6.svg" alt="">
             <img class="img absolute w-[11%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[23%] -translate-x-[165%]"
                 src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
         </div>
         <div dir="ltr" class="text text-white w-[20%] m-auto">
             <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
-            <p class="text-xs">
-            <h2 class="text-[30px] uppercase">apple</h2>
+            <h2 class="text-base uppercase">apple</h2>
+            <p class="text-[6px] lg:text-sm lg:mb-3">
             You might be looking at this Slider Revolution template and wondering how the heck you’re going to
             repurpose it for your
             needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
             sliders, it can easily
-            be done within minutes. <br><br>
-            <a class="text-white py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]" href="#">
+            be done within minutes.
+            </p>
+            <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]" href="#">
                 All products
             </a>
-            </p>
         </div>
     </div>
     <!-- main section/ -->
