--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <!-- nav bar/ -->
     <!-- main section -->
     <div class="content flex justify-between items-center w-full">
-        <div class="w-[20%] relative w-80 group m-auto">
+        <div class="w-[20%] relative group m-auto">
             <img class="scale-[1.2] relative group-hover:-translate-x-[33%] -translate-x-[20%] translate-y-[114%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
                 src="star/Cartoons/Cartoon peach center.svg" alt="">
-            <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-9 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+            <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[7%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
-            <img class="absolute z-[9] group-hover:-translate-x-36 -translate-x-40 group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+            <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
                 src="star/Cartoons/Cartoon peach right left.svg" alt="">
         </div>
         <div class="image w-[40%] group flex justify-center">
