add section delete body

--- a/index.html
+++ b/index.html
@@ -11,96 +11,97 @@
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 
-<body
-    class="font-[ poppins,'sans_serif'] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] min-h-screen scroll-smooth overflow-hidden relative">
-    <!-- nav bar -->
-    <aside
-        class="ml-[-100%] fixed z-10 top-[7%]  px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
-        <div>
-            <ul class="tracking-wide mt-8 leading-5 text-sm font-normal">
-                <li class="hover:scale-[1.5] transition duration-700">
-                    <img src="star/LOGO/dubai_city.svg" alt="">
-                </li>
-                <li class="hover:scale-[1.5] transition duration-700">
-                    <img src="star/LOGO/dubai_city.svg" alt="">
-                </li>
-                <li class="hover:scale-[1.5] transition duration-700">
-                    <img src="star/LOGO/dubai_city.svg" alt="">
-                </li>
-                <li class="hover:scale-[1.5] transition duration-700">
-                    <img src="star/LOGO/dubai_city.svg" alt="">
-                </li>
-                <li class="hover:scale-[1.5] transition duration-700">
-                    <img src="star/LOGO/dubai_city.svg" alt="">
-                </li>
-                <li class="hover:scale-[1.5] transition duration-700">
-                    <img src="star/LOGO/dubai_city.svg" alt="">
-                </li>
-            </ul>
+<body>
+    <section class="font-[ poppins,'sans_serif'] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
+        <!-- nav bar -->
+        <aside
+            class="ml-[-100%] fixed z-10 top-[7%]  px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
+            <div>
+                <ul class="tracking-wide mt-8 leading-5 text-sm font-normal">
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                    <li class="hover:scale-[1.5] transition duration-700">
+                        <img src="star/LOGO/dubai_city.svg" alt="">
+                    </li>
+                </ul>
+            </div>
+        </aside>
+        <!-- nav bar/ -->
+        <!-- main section -->
+        <div class="content flex justify-between items-center w-full">
+            <div class="w-[20%] relative group m-auto">
+                <img class="scale-[1.2] relative group-hover:-translate-x-[33%] -translate-x-[20%] translate-y-[114%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
+                    src="star/Cartoons/Cartoon peach center.svg" alt="">
+                <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[7%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="star/Cartoons/Cartoon peach right left.svg" alt="">
+                <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="star/Cartoons/Cartoon peach right left.svg" alt="">
+            </div>
+            <div class="image w-[40%] group flex justify-center">
+                <img class="img w-[60%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                    src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
+                <img class="img absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
+                    src="star\orange/orange-juice-splash.svg" alt="">
+                <img class="img absolute z-[8] w-0 group-hover:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
+                    src="star\orange\orange-poster.svg" alt="">
+                <img class="img absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                    src="star\orange/orange-ingredients-10.svg" alt="">
+                <img class="img absolute w-[9%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-0 translate-x-[130%]"
+                    src="STAR/منتجات BOOM BOOM/PINEAPPLE F 6.svg" alt="">
+                <img class="img absolute w-[11%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[23%] -translate-x-[165%]"
+                    src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
+            </div>
+            <div dir="ltr" class="text text-white w-[20%] m-auto">
+                <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
+                <h2 class="text-base uppercase">apple</h2>
+                <p class="text-[6px] lg:text-sm lg:mb-3">
+                You might be looking at this Slider Revolution template and wondering how the heck you’re going to
+                repurpose it for your
+                needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
+                sliders, it can easily
+                be done within minutes.
+                </p>
+                <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]" href="#">
+                    All products
+                </a>
+            </div>
         </div>
-    </aside>
-    <!-- nav bar/ -->
-    <!-- main section -->
-    <div class="content flex justify-between items-center w-full">
-        <div class="w-[20%] relative group m-auto">
-            <img class="scale-[1.2] relative group-hover:-translate-x-[33%] -translate-x-[20%] translate-y-[114%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
-                src="star/Cartoons/Cartoon peach center.svg" alt="">
-            <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[7%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
-                src="star/Cartoons/Cartoon peach right left.svg" alt="">
-            <img class="absolute z-[9] group-hover:-translate-x-[50%] -translate-x-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
-                src="star/Cartoons/Cartoon peach right left.svg" alt="">
+        <!-- main section/ -->
+        <!-- icons section -->
+        <div class="icons flex justify-center border border-[#D35910]">
+            <div class="group relative w-20">
+                <img class="group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                    onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                    src="star/mini dirnks/mini apple.svg" alt="">
+                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                    src="star/mini dirnks/mini apple.svg" alt="">
+                <h2 class="group-hover:text-[#D35910]">orange</h2>
+            </div>
+            <div class="group relative w-20">
+                <img class="group-hover:scale-[1] group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                    onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                    src="star/mini dirnks/mini apple.svg" alt="">
+                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
+                    src="star/mini dirnks/mini apple.svg" alt="">
+                <h2 class="group-hover:text-white">orange</h2>
+            </div>
         </div>
-        <div class="image w-[40%] group flex justify-center">
-            <img class="img w-[60%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
-                src="star/منتجات BOOM BOOM/PINEAPPLE F 5 from figma.svg" alt="">
-            <img class="img absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
-                src="star\orange/orange-juice-splash.svg" alt="">
-            <img class="img absolute z-[8] w-0 group-hover:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
-                src="star\orange\orange-poster.svg" alt="">
-            <img class="img absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
-                src="star\orange/orange-ingredients-10.svg" alt="">
-            <img class="img absolute w-[9%] z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:-rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-0 translate-x-[130%]"
-                src="STAR/منتجات BOOM BOOM/PINEAPPLE F 6.svg" alt="">
-            <img class="img absolute w-[11%] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[23%] -translate-x-[165%]"
-                src="STAR/منتجات BOOM BOOM/PINEAPPLE F 7.svg" alt="">
-        </div>
-        <div dir="ltr" class="text text-white w-[20%] m-auto">
-            <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
-            <h2 class="text-base uppercase">apple</h2>
-            <p class="text-[6px] lg:text-sm lg:mb-3">
-            You might be looking at this Slider Revolution template and wondering how the heck you’re going to
-            repurpose it for your
-            needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
-            sliders, it can easily
-            be done within minutes.
-            </p>
-            <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]" href="#">
-                All products
-            </a>
-        </div>
-    </div>
-    <!-- main section/ -->
-    <!-- icons section -->
-    <div class="icons flex justify-center border border-[#D35910]">
-        <div class="group relative w-20">
-            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                src="star/mini dirnks/mini apple.svg" alt="">
-            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                src="star/mini dirnks/mini apple.svg" alt="">
-            <h2 class="group-hover:text-[#D35910]">orange</h2>
-        </div>
-        <div class="group relative w-20">
-            <img class="absolute group-hover:scale-[1] group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                src="star/mini dirnks/mini apple.svg" alt="">
-            <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                src="star/mini dirnks/mini apple.svg" alt="">
-            <h2 class="group-hover:text-white">orange</h2>
-        </div>
-    </div>
+    </section>
     <!-- icons section/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.0/flowbite.min.js"></script>
     <script>
