edit mini drinks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 
 <body>
-    <section class="font-[ poppins,'sans_serif'] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
+    <section
+        class="font-[poppins,'sans_serif'] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
         <!-- nav bar -->
         <aside
             class="ml-[-100%] fixed z-10 top-[7%]  px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
@@ -68,38 +69,43 @@
                 <img class="" src="star/LOGO/frizbi logo with bg.svg" alt="">
                 <h2 class="text-base uppercase">apple</h2>
                 <p class="text-[6px] lg:text-sm lg:mb-3">
-                You might be looking at this Slider Revolution template and wondering how the heck you’re going to
-                repurpose it for your
-                needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
-                sliders, it can easily
-                be done within minutes.
+                    You might be looking at this Slider Revolution template and wondering how the heck you’re going to
+                    repurpose it for your
+                    needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
+                    sliders, it can easily
+                    be done within minutes.
                 </p>
-                <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]" href="#">
+                <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]"
+                    href="#">
                     All products
                 </a>
             </div>
         </div>
         <!-- main section/ -->
         <!-- icons section -->
-        <div class="icons flex justify-center border border-[#D35910]">
-            <div class="group relative w-20">
-                <img class="group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                    onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                    src="star/mini dirnks/mini apple.svg" alt="">
-                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                    src="star/mini dirnks/mini apple.svg" alt="">
-                <h2 class="group-hover:text-[#D35910]">orange</h2>
+        <div class="">
+            <div></div>
+            <div class="border-b border-[#D35910] flex justify-center">
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-white text-center">orange</h2>
+                </div>
             </div>
-            <div class="group relative w-20">
-                <img class="group-hover:scale-[1] group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
-                    onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
-                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                    src="star/mini dirnks/mini apple.svg" alt="">
-                <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9]"
-                    src="star/mini dirnks/mini apple.svg" alt="">
-                <h2 class="group-hover:text-white">orange</h2>
-            </div>
+            <div></div>
         </div>
     </section>
     <!-- icons section/ -->
