edit mini drinks-

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 </head>
 
 <body>
-    <section
-        class="font-[poppins,'sans_serif'] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
+    <section class="font-[Inter] box-border bg-gradient-to-t from-[#0E0E0E] to-[#D35910] scroll-smooth relative">
         <!-- nav bar -->
         <aside
             class="ml-[-100%] fixed z-10 top-[7%]  px-4 w-full hidden lg:flex flex-col justify-between transition duration-300 md:w-4/12 lg:ml-0 lg:w-[11%] xl:w-[11%] 2xl:w-[11%] mr-[1.5%]">
@@ -83,8 +82,11 @@
         </div>
         <!-- main section/ -->
         <!-- icons section -->
-        <div class="">
-            <div></div>
+        <div class="flex justify-center items-center">
+            <div>
+                <img class="rotate-[180deg] border border-[#D35910] p-4 rounded-full " width="60"
+                    src="star/اسهم/Arrow 1left.svg" alt="">
+            </div>
             <div class="border-b border-[#D35910] flex justify-center">
                 <div class="group relative w-20">
                     <img class="relative group-hover:scale-[1] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -93,7 +95,7 @@
                         src="star/mini dirnks/mini apple.svg" alt="">
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-[#D35910] text-center">orange</h2>
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
                 </div>
                 <div class="group relative w-20">
                     <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -102,10 +104,76 @@
                         src="star/mini dirnks/mini apple.svg" alt="">
                     <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                         src="star/mini dirnks/mini apple.svg" alt="">
-                    <h2 class="group-hover:text-white text-center">orange</h2>
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
+                </div>
+                <div class="group relative w-20">
+                    <img class="relative group-hover:scale-[1]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                        onclick="phones(this.src); colors('#000')" src="star/mini dirnks/mini orange.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <img class="absolute group-hover:scale-[1] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                        src="star/mini dirnks/mini apple.svg" alt="">
+                    <h2 class="group-hover:text-[#D35910] text-center text-white">orange</h2>
                 </div>
             </div>
-            <div></div>
+            <div>
+                <img class="border border-[#D35910] p-4 rounded-full " width="60" src="star/اسهم/Arrow 1left.svg"
+                    alt="">
+            </div>
         </div>
     </section>
     <!-- icons section/ -->
